--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,17 @@
 -*- text -*-
 
+0.6 - 2008-08-10
+
+  Bug fix release. Fixed memory errors and leaks.
+
+0.5 - 2008-07-09
+
+  Removed use of asprintf() for more portability.
+
+  Added a distribution maker in the Makefile.
+
+  Version information now moved to Makefile.
+
 0.4 - 2008-07-07
 
   Support for multiple IPv6 addresses in RDNSS options added.
