--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,7 @@
-- Figure out how to work with a concurrent dhclient for IPv4
-  addressses. dhclient-exit-hooks that merges with real
-  /etc/resolv.conf?
+- Work with the resolvconf program.
 
 - Handle lifetime of RDNSS.
 
 - Patch RDNS option into FreeBSD's rtadvd.
-
-- Privilege seperation in radns?
 
 - Tests? How?
