--- a/README
+++ b/README
@@ -15,7 +15,7 @@ Start, for instance, like this as root:
 
   # ./radns -f /etc/resolv.conf
 
-The program drops priveleges to a user called radns (or specifiy
+The program drops priveleges to a user called radns (or specify
 another user with -u username). The file /etc/resolv.conf must be
 writable by the user. Please note that some other programs also might
 want to modify the same file. See below on Dual Stack and DHCP.
@@ -27,7 +27,7 @@ for "verbosity". For even more verbosity, including hex dumps of the
 received messages, repeat it, such as -v -v -v.
 
 For radns to be useful, there must be a corresponding program on the
-router, sending out Router Advertisements with the RDNSS option. One
+router sending out Router Advertisements with the RDNSS option. One
 such program is radvd:
 
   http://www.litech.org/radvd/
@@ -45,7 +45,7 @@ If this is the case, there are numerous options.
   1. Edit /etc/dhclient-enter-hooks and add:
 
      make_resolv_conf() {
-       # "do nothing to resolv.conf"
+       # do nothing to resolv.conf
      }
 
   2. Edit /etc/dhclient-exit-hooks and add:
@@ -68,20 +68,25 @@ If this is the case, there are numerous options.
   This will make sure that dhclient doesn't touch /etc/resolv.conf and
   that the information dhclient receives about a resolving DNS server
   is merged with radns' information into /etc/resolv.conf. Note,
-  though, that this will only happen when dhclient takes action.
+  though, that this will only happen when dhclient takes action, not
+  when radns receives a Router Advertisment.
 
-  Please note that currently radns will never remove
-  radns-resolv.conf! This might interfer with normal operation.
+  NOTA BENE: At the moment radns will never remove radns-resolv.conf!
+  This might interfer with normal operation. This will be fixed in a
+  future release.
 
-* If you're DHCP client uses the resolvconf program:
+* If your DHCP client uses the resolvconf program:
 
   1. Make sure resolvconf's interface directory
      (/usr/local/etc/resolvconf/run/interfaces/ on FreeBSD) is
      writable by the radns user, by default 'radns'.
 
-  2. Start radns like this:
+  2. Put the enclosed file 'radns-script' somewhere, for instance in
+     /usr/local/bin.
 
-     # radns -f /tmp/radns-resolv.conf
+  3. Start radns like this:
+     
+     # radns -f /tmp/radns-resolv.conf -s /usr/local/bin/radns-script
  
 = Texts =
 
@@ -91,7 +96,7 @@ RFC 3972 Cryptographically Generated Addresses (CGA)
 RFC 4861 Neighbor Discovery for IP version 6 (IPv6).
 RFC 5006 IPv6 Router Advertisement Option for DNS Configuration
 
-= Author =
+= Authors =
 
 radns was originally written by Michael Cardell Widerkrantz (MC) in
 2008 for Stickybit AB and has since been maintained by MC. David
