--- a/README
+++ b/README
@@ -28,13 +28,31 @@ want radns to run in the foreground and log to the terminal instead,
 add -v for "verbosity". For even more verbosity, including hex dumps
 of the received messages, repeat it, up to -v -v -v.
 
+== Router Software ==
+
 For radns to be useful, there must be a corresponding program on the
 IPv6 router sending out Router Advertisements with the RDNSS
 option. One such program is radvd:
 
   http://www.litech.org/radvd/
 
-= Dual Stack and DHCP =
+You need to configure radvd to send out the RDNSS option. Here's a
+complete configuration for testing purposes:
+
+interface em0
+{
+	AdvSendAdvert on;
+	prefix 2001:db8:1:0::/64 { };
+        RDNSS 2001:db8:1::1 { };
+}
+
+Be sure to change "em0" to what your network interface is called, for
+instance "eth0" for the first NIC on a Linux host.
+
+You need to turn on IPv6 forwarding on your router, otherwise radvd
+won't start.
+
+== Dual Stack and DHCP ==
 
 If you're on a dual stack machine that uses DHCP, chances are that the
 /etc/resolv.conf file will be written to by your DHCP client.
@@ -76,7 +94,7 @@ If this is the case, there are numerous options.
      # chown radns /etc/radns-resolv.conf     
      # radns -f /tmp/radns-resolv.conf -s /usr/local/bin/radns-script
 
-= Development =
+== Development ==
 
 The latest version can usually be found here:
 
@@ -91,7 +109,7 @@ If you think the early history looks funny, it's because the releases
 hand. Not much development was done in CVS and then everything was
 migrated to git.
  
-= Texts =
+== Texts ==
 
 RFC 2460 Internet Protocol, Version 6 (IPv6) 
 RFC 3971 SEcure Neighbor Discovery (SEND)
@@ -99,7 +117,7 @@ RFC 3972 Cryptographically Generated Addresses (CGA)
 RFC 4861 Neighbor Discovery for IP version 6 (IPv6).
 RFC 5006 IPv6 Router Advertisement Option for DNS Configuration
 
-= Authors =
+== Authors ==
 
 radns was originally written by Michael Cardell Widerkrantz (MC) in
 2008 for Stickybit AB and has since been maintained by MC. David
