--- a/README
+++ b/README
@@ -2,26 +2,40 @@
 
 Router Advertisement DNS (radns)
 
-This is a small program used for finding out one or more addresses to
-resolving DNS servers. It listens for IPv6 Router Advertisements with
-the Recursive DNS Server (RDNSS) option and stores the address(es) in
-a file in the same syntax as resolv.conf(5). Currently, the default
-file name is ./resolv.conf, but is configurable with -f <filename>.
+radns listens for IPv6 Router Advertisements with the Recursive DNS
+Server (RDNSS) option and stores the address(es) in a file in the same
+syntax as resolv.conf(5). Currently, the default file name is
+./resolv.conf, but is configurable with -f <filename>.
 
-A typical way to start radns from the command line would be, for
-instance, this command as the root user:
+To use radns in FreeBSD, edit /etc/rc.conf and add:
+
+  radns_enable="YES"
+
+then copy radns.sh to /usr/local/etc/rc.d/radns and start radns as
+root by typing:
+
+ # /usr/local/etc/rc.d/radns start
+
+At the next reboot, radns will start automatically. 
+
+Look in radns.sh for more variables to set in rc.conf.
+
+If you want to start radns manually, a typical way to start radns from
+the command line would be this command as the root user:
 
   # ./radns -f /etc/resolv.conf
 
-The program drops priveleges to a user called radns (specify another
-user with -u username). The file /etc/resolv.conf must be writable by
-this user. Please note that some other programs also might want to
-modify the same file which might interfer with radns's operation. See
-below on Dual Stack and DHCP.
+The program by default drops priveleges to a user called radns. You
+can specify another user with -u <username>. The file /etc/resolv.conf
+must be writable by this user.
+
+*Note* that some other programs also might want to modify the same
+file. This will interfer with radns's operation. See below on Dual
+Stack and DHCP.
 
 The program optionally calls another program, usually a shell script,
 to act on the information it receives. Specify the script with -s
-<filename>.
+<path to script>.
 
 Logs will be sent through syslog to the LOG_DAEMON facility. If you
 want radns to run in the foreground and log to the terminal instead,
@@ -30,9 +44,9 @@ of the received messages, repeat it, up to -v -v -v.
 
 == Router Software ==
 
-For radns to be useful, there must be a corresponding program on the
-IPv6 router sending out Router Advertisements with the RDNSS
-option. One such program is radvd:
+For radns to be at all useful, there must be a corresponding program
+on the IPv6 router. This program is responsible for sending out Router
+Advertisements with the RDNSS option. One such program is radvd:
 
   http://www.litech.org/radvd/
 
@@ -57,29 +71,32 @@ won't start.
 If you're on a dual stack machine that uses DHCP, chances are that the
 /etc/resolv.conf file will be written to by your DHCP client.
 
-If this is the case, there are numerous options.
+If this is the case, there are a few things you can do:
 
 * Given that you're running the ISC dhclient:
 
   1. Copy the dhclient-exit-hooks file in this directory to /etc/.
 
-  2. Start radns with:
+  2. Do this before starting radns:
   
      # touch /etc/radns-resolv.conf
      # chown radns /etc/radns-resolv.conf
-     # radns -f /etc/radns-resolv.conf
-     
+
+  Configure radns to write the /etc/radns-resolv.conf file.
+
   This will make sure that the information dhclient receives about a
   resolving DNS server is merged with radns' information into
   /etc/resolv.conf. Note, though, that this will only happen when
   dhclient takes action, not when radns receives a Router
   Advertisment.
 
-  NOTA BENE: At the moment radns will never remove radns-resolv.conf!
-  This might interfer with normal operation. This will be fixed in a
-  future release.
+  NOTA BENE: At the moment radns will only remove radns-resolv.conf if
+  it dies by being stopped by the provided start script and not if it
+  dies in some other way!  This might interfer with normal
+  operation. This will be fixed in a future release.
 
-* If your DHCP client uses the resolvconf program:
+* If your DHCP client uses the resolvconf program (many Linux
+  distributions, but also dns/openresolv in FreeBSD ports):
 
   1. Make sure resolvconf's interface directory
      (/usr/local/etc/resolvconf/run/interfaces/ on FreeBSD) is
@@ -105,9 +122,9 @@ There is a git repository here:
   http://hack.org/mc/git/radns/
 
 If you think the early history looks funny, it's because the releases
-(not every commit) were exported from Perforce and imported to CVS by
-hand. Not much development was done in CVS and then everything was
-migrated to git.
+(not every commit --- just the releases) were exported from Perforce
+and imported to CVS by hand. Not much development was done in CVS and
+then everything was migrated to git.
  
 == Texts ==
 
@@ -121,6 +138,6 @@ RFC 5006 IPv6 Router Advertisement Option for DNS Configuration
 
 radns was originally written by Michael Cardell Widerkrantz (MC) in
 2008 for Stickybit AB and has since been maintained by MC. David
-Westlund provided patches and suggestions.
+Westlund provided some patches and suggestions.
 
 Contact: mc at the domain hack.org
