--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,10 @@
   * Works in a temporary directory, then renames to the real radns
     resolv.conf to get atomic changes.
 
+  * Added DNS servers that never expires.
+
+  * Removed DNS server when asked to by RA (lifetime == 0).
+
 2011-02-18
 
   * Wrote addresses even if expired or never set. Patch by Peter Chubb.
