--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,22 @@
 -*- text -*-
 
+2011-05-19
+
+  * Major rewrite of the memory management and adding of resolvers.
+    Now we use a linked list and always add to the head of the list.
+    NOTE WELL that this means that the latest received address, even
+    if it is last in a RDNSS option, will always be the first listed
+    in the resolv file.
+
+  * New option -m <maximum number of resolvers to keep>. The default
+    is 3. Zero (0) mean unlimited numbers of resolvers. Note that this
+    might not be supported by your resolver functions.
+
+  * Always truncate resolv file when starting.
+
+  * We might be RFC 6106 compliant, except that we don't support the
+    DNSSL option yet.
+
 2011-05-16
 
   * Now uses clock_gettime() instead of gettimeofday(). Hopefully this
