--- a/README
+++ b/README
@@ -3,9 +3,10 @@
 Router Advertisement DNS (radns)
 
 radns listens for IPv6 Router Advertisements with the Recursive DNS
-Server (RDNSS) option and stores the address(es) in a file in the same
-syntax as resolv.conf(5). The default file name is ./resolv.conf, but
-it is configurable with -f <filename>.
+Server (RDNSS) and the DNS Search List (DNSSL) options and stores the
+search list and address(es) in a file in the same syntax as
+resolv.conf(5). The default file name is ./resolv.conf, but it is
+configurable with -f <filename>.
 
 To use radns in FreeBSD, edit /etc/rc.conf and add:
 
@@ -16,9 +17,10 @@ then copy the radns.sh start script in this directory to
 
  # /usr/local/etc/rc.d/radns start
 
-At the next reboot, radns will start automatically. 
+At the next reboot, radns will start automatically. The resulting
+resolv file will be /etc/radns/radns-resolv.conf.
 
-Look in radns.sh for more variables to set in rc.conf.
+Look in the radns.sh script for more variables to set in rc.conf.
 
 If you want to start radns manually, a typical way to start radns from
 the command line would be this command as the root user:
@@ -39,8 +41,9 @@ you may want to make /etc/resolv.conf a symbolic link to
 make a symbolic link. See below on Dual Stack and DHCP.
 
 The program optionally calls another program, usually a shell script,
-to act on the information it receives. Specify the script with -s
-<path to script>.
+to act on the information it receives. The script is called whenever
+radns has updated the resolv file. Specify the script with -s <path to
+script>.
 
 Logs will be sent through syslog to the LOG_DAEMON facility. If you
 want radns to run in the foreground and log to the terminal instead,
@@ -51,18 +54,19 @@ of the received messages, repeat it, up to -v -v -v.
 
 For radns to be at all useful, there must be a corresponding program
 on the IPv6 router. This program is responsible for sending out Router
-Advertisements with the RDNSS option. One such program is radvd:
+Advertisements. One such program is radvd:
 
   http://www.litech.org/radvd/
 
-You need to configure radvd to send out the RDNSS option. Here's a
-complete configuration for testing purposes:
+You need to configure radvd to send out the RDNSS and DNSSL options.
+Here's a complete configuration for testing purposes:
 
 interface em0
 {
 	AdvSendAdvert on;
 	prefix 2001:db8:1:0::/64 { };
         RDNSS 2001:db8:1::1 { };
+        DNSSL example.com { };
 }
 
 Be sure to change "em0" to what your network interface is called, for
@@ -77,7 +81,7 @@ If you want this to survive reboots, set
 
   ipv6_gateway_enable="YES"
 
-in rc.conf instead.
+in rc.conf.
 
 == Dual Stack and DHCP ==
 
@@ -101,17 +105,17 @@ If this is the case, there are a few things you can do:
   dhclient takes action, not when radns receives a Router
   Advertisment.
 
-  NOTA BENE: At the moment radns will only remove radns-resolv.conf if
-  it dies by being stopped by the provided start script and not if it
-  dies in some other way!  This might interfer with normal
-  operation. This will be fixed in a future release.
+* If your DHCP client uses the resolvconf program which can be found
+  in many Linux distributions, but also as dns/openresolv in FreeBSD
+  ports you can follow these instructions. This instructions are valid
+  for FreeBSD, but it might be similar for Linux distributions.
 
-* If your DHCP client uses the resolvconf program (found in many Linux
-  distributions, but also as dns/openresolv in FreeBSD ports):
+  1. Make sure resolvconf's directory (/usr/local/etc/resolvconf/ on
+     FreeBSD) is writable by the radns user, by default 'radns'.
 
-  1. Make sure resolvconf's interface directory
-     (/usr/local/etc/resolvconf/run/interfaces/ on FreeBSD) is
-     writable by the radns user, by default 'radns'.
+  2. If you only want to change the /etc/resolv.conf file, remove all
+     scripts except libc from /usr/local/etc/resolvconf/update.d/,
+     typicall by moving them somewhere else.
 
   2. Put the enclosed file 'radns-script' somewhere, for instance in
      /usr/local/bin.
@@ -140,16 +144,29 @@ then everything was migrated to git.
  
 == Texts ==
 
+Some references:
+
 RFC 2460 Internet Protocol, Version 6 (IPv6) 
 RFC 3971 SEcure Neighbor Discovery (SEND)
 RFC 3972 Cryptographically Generated Addresses (CGA)
 RFC 4861 Neighbor Discovery for IP version 6 (IPv6).
-RFC 5006 IPv6 Router Advertisement Option for DNS Configuration
+RFC 5006 IPv6 Router Advertisement Option for DNS Configuration (obsolete)
+RFC 6106 IPv6 Router Advertisement Options for DNS Configuration
+
+radns might be usable with SEND but it's untested.
 
 == Authors ==
 
 radns was originally written by Michael Cardell Widerkrantz (MC) in
-2008 for Stickybit AB and has since been maintained by MC. David
-Westlund provided some patches and suggestions.
+2008 for Stickybit AB and has since been maintained by MC. 
 
 Contact: mc at the domain hack.org
+
+Other contributers include:
+
+  David Westlund
+  Peter Chubb
+  Janne Johansson
+  Rickard Molin
+
+I'm sorry if I forgot someone! Remind me and I'll add you.
