Spelling and adding Rick.

--- a/README
+++ b/README
@@ -162,11 +162,12 @@ radns was originally written by Michael Cardell Widerkrantz (MC) in
 
 Contact: mc at the domain hack.org
 
-Other contributers include:
+Other contributors include:
 
   David Westlund
   Peter Chubb
   Janne Johansson
   Rickard Molin
+  Rick Dicaire
 
 I'm sorry if I forgot someone! Remind me and I'll add you.
