Added support for priveleged helper program, raresolv. The latter uses a compiled in path to the resolvconf program (see define in Makefile) and calls it running as root to add or delete items to resolv.conf.
raresolv uses a very simple one-way protocol over a pipe to add (+) or
delete (+) items. The items themselves are read from the resolv.conf
file radns writes.

--- a/README
+++ b/README
@@ -8,7 +8,20 @@ search list and address(es) in a file in the same syntax as
 resolv.conf(5). The default filename is ./resolv.conf, but it is
 configurable with -f <filename>.
 
-== Configuration & Integration ==
+== Building, Configuration & Integration ==
+
+To build you will need to know if Posix realtime function
+clock_gettime() needs a special library. On Linux systems, for
+instance, this is in librt (link with -lrt). Obviously, you will need
+the socket API. On some systems this is in libsocket (link with
+-lsocket).
+
+If your system use the resolvconf programs to configure resolv.conf
+and you intend to use the -c flag in radns to use a priveleged helper
+program to call resolvconf, you need to know the path to the
+resolvconf binary. Add it to the define in the Makefile:
+
+  -DRESOLVCONF=\"/usr/local/sbin/resolvconf\"
 
 Configuration and integration is a bit system dependent. Look at the
 file named after your system in this directory. For FreeBSD, read
